Update setup.py/tox.ini to use Flake8

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,11 @@
 [tox]
-envlist = pep8, pyflakes, py27, test
+minversion = 1.6
+skipsdist = True
+envlist = pep8, py27
 
+[testenv]
+deps = nose
+commands = nosetests --nologcapture --detailed-errors
 
 [testenv:docs]
 basepython = python
@@ -9,13 +14,9 @@ deps = sphinx
 commands = sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
 
 [testenv:pep8]
-deps = pep8
-commands = pep8 --repeat --show-source setup.py gerritclone
+deps = flake8
+commands = flake8
 
-[testenv:pyflakes]
-deps = pyflakes
-commands = pyflakes setup.py gerritclone
-
-[testenv:test]
-deps = nose
-commands = nosetests --nologcapture --detailed-errors
+[flake8]
+show-source=True
+exclude = .venv,.tox,dist,doc,build,*.egg
