Improve tox environments
Explicitly target python3

Renames:
pep8 -> lint
docs -> doc

--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,19 @@
 [tox]
 minversion = 1.6
 skipsdist = True
-envlist = pep8, py3
+envlist = lint, py3
 
 [testenv]
+basepython = python3
 deps = nose
 commands = nosetests --nologcapture --detailed-errors
 
-[testenv:docs]
-basepython = python
+[testenv:doc]
 changedir = doc
 deps = sphinx
 commands = sphinx-build -b html -d {envtmpdir}/doctrees . {envtmpdir}/html
 
-[testenv:pep8]
+[testenv:lint]
 deps = flake8
 commands = flake8
 
